# ai-interview-platform

./: README.md  main.py  pyproject.toml  sample.env
experiments/: README.md  stt.py  stt_gemini.py  tts.py  tts_openai.py
speech/: stt.py  tts.py
